# GHReg

./: .gitignore  README.md  main.py  pyproject.toml
.termvas/: termvas.json
cf-email-dashboard/: API_DOCS.md  package-lock.json  package.json  tsconfig.tsbuildinfo
cf-email-dashboard/app/: layout.tsx  page.tsx
cf-email-dashboard/app/api/destinations/: route.ts
cf-email-dashboard/app/api/destinations/create/: route.ts
cf-email-dashboard/app/api/destinations/delete/: route.ts
cf-email-dashboard/app/api/emails/: route.ts
cf-email-dashboard/app/api/emails/detail/: route.ts
cf-email-dashboard/app/api/rules/: route.ts
cf-email-dashboard/components/: add-dialog.tsx  dashboard-tabs.tsx  delete-confirm.tsx  destinations-panel.tsx  email-inbox.tsx  rules-table.tsx  theme-toggle.tsx
cf-email-dashboard/data/: accounts.txt
cf-email-dashboard/lib/: cache.ts  cloudflare.ts  gmail.ts
extensions/yescaptcha_firefox/: _auto_config.js  background.js  config.js  manifest.json
extensions/yescaptcha_firefox/_locales/en/: messages.json
extensions/yescaptcha_firefox/_locales/zh_CN/: messages.json
extensions/yescaptcha_firefox/content/: captcha_manager.js  context_responder.js  index.js  recaptchaProtocol.js
extensions/yescaptcha_firefox/option/: index.js
extensions/yescaptcha_firefox/popup/: index.html  index.js
gh-check/: Cargo.toml
gh-check/src/: cache.rs  config.rs  headers.rs  main.rs  parsers.rs
gh-check/src/github/: graphql.rs  login.rs  mod.rs  models.rs  org.rs  pat.rs  routes.rs
gh-check/src/outlook/: client.rs  mod.rs  models.rs  routes.rs
infra/: cf_email_routing.py  deploy_cf_worker.py
src/: api.py  cf_email_routing.py  github_login.py  import_token.py  outlook.py  pat_creator.py  signup.py  tui.py  tui_outlook.py  tui_signup.py  tui_xdoop.py  xdoop.py
src/common/: headers.py  parsers.py
src/login/: __init__.py  __main__.py  session.py
src/org/: __init__.py  __main__.py  manager.py
src/pat/: __main__.py  cli.py  creator.py  permissions.py  storage.py  sudo.py
src/signup/: __init__.py  __main__.py  captcha.py  config.py  device_auth.py  email_verifier.py  flow.py  form_filler.py  game_frame.py  interceptor.py  post_signup.py  proxy.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/github/: page.tsx
web/src/components/: OrgPanel.tsx  accounts-table.tsx  sidebar.tsx
web/src/lib/: api.ts
(+7 files in other folders)
