[project]
name = "ghreg"
version = "0.1.0"
description = "GitHub account registration automation with Camoufox stealth browser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "camoufox[geoip]",
    "requests",
    "curl-cffi",
]

[project.scripts]
signup = "src.signup.flow:github_signup"
pat = "src.pat.cli:main"
