[project]
name = "ghreg"
version = "0.1.0"
description = "GitHub account registration automation with Camoufox stealth browser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "camoufox[geoip]",
    "requests",
    "curl-cffi",
    "pyotp>=2.9.0",
    "rich>=13.0",
    "textual>=8.2.3",
    "textual-serve>=1.1.3",
    "dill>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
signup = "src.signup.flow:github_signup"
pat = "src.pat.cli:main"
tuitui = "src.tui:main"
tui-signup = "src.tui_signup:main"
tui-xdoop = "src.tui_xdoop:main"
tui-outlook = "src.tui_outlook:main"
